feat: Adding area and scatter charts.

--- a/angular_04_echarts/src/app/components/select-chart/select-chart.component.html
+++ b/angular_04_echarts/src/app/components/select-chart/select-chart.component.html
@@ -45,6 +45,8 @@
                     <option value="pie">Pizza</option>
                     <option value="bar">Barras</option>
                     <option value="line">Linha</option>
+                    <option value="area">Área</option>
+                    <option value="scatter">Dispersão</option>
                 </select>
             </div>
         </div>
@@ -107,6 +109,12 @@
             <app-line-chart *ngIf="chartOption === 'line'" [cardID]="cardID" [userOptions]="userOptions"
                 [chartOption]="chartOption" [userOptionsToDB]="userOptionsToDB" [filterData]="filterData">
             </app-line-chart>
+            <app-area-chart *ngIf="chartOption === 'area'" [cardID]="cardID" [userOptions]="userOptions"
+                [chartOption]="chartOption" [userOptionsToDB]="userOptionsToDB" [filterData]="filterData">
+            </app-area-chart>
+            <app-scatter-chart *ngIf="chartOption === 'scatter'" [cardID]="cardID" [userOptions]="userOptions"
+                [chartOption]="chartOption" [userOptionsToDB]="userOptionsToDB" [filterData]="filterData">
+            </app-scatter-chart>
             <app-empty-chart *ngIf="chartOption === 'empty'"></app-empty-chart>
             <app-loading *ngIf="chartOption === 'loading'"></app-loading>
         </section>
