--- a/angular_04_echarts/src/app/components/select-chart/select-chart.component.html
+++ b/angular_04_echarts/src/app/components/select-chart/select-chart.component.html
@@ -52,31 +52,62 @@
             </div>
         </div>
         <div *ngIf="isFilter" class="col-9 backdrop w-75">
-            <h1 class="block m-2 fs-6 normal px-4 pt-3 pb-2 text-white">Selecione o período</h1>
-            <div class="h-300 mx-4 py-2 d-flex align-items-end flex-column filterContent">
-                <mat-form-field class="w-100">
-                    <mat-label class="text-pink">Insira um período</mat-label>
-                    <mat-date-range-input [rangePicker]="picker">
-                        <input matStartDate placeholder="Start date" [(ngModel)]="startDate">
-                        <input matEndDate placeholder="End date" [(ngModel)]="endDate">
-                    </mat-date-range-input>
-                    <mat-hint class="text-white small">MM/DD/YYYY – MM/DD/YYYY</mat-hint>
-                    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-                    <mat-date-range-picker touchUi #picker></mat-date-range-picker>
-                </mat-form-field>
-                <span class="my-2 small text-white">
-                    Salve para atualizar os dados :)
-                </span>
-                <div class="d-flex filterButtons">
-                    <button *ngIf="isFilter" class="btn text-14 rounded rounded-lg bg-gray text-white p-2"
-                        (click)="cleanFilter()">Limpar Filtro</button>
-                    <button *ngIf="isFilter" class="btn text-14 rounded rounded-lg bg-pink text-white p-2"
-                        (click)="addFilter()">Salvar</button>
+            <h1 class="w-100 block m-2 fs-6 normal px-4 pt-3 pb-2 text-white">Selecione o período</h1>
+            <div class="h-300 w-100 py-2 d-flex align-items-start justify-content-center flex-column">
+                <div class="w-100 d-flex flex-column filterContent">
+                    <mat-form-field class="w-75">
+                        <mat-label class="text-pink">Insira um período</mat-label>
+                        <mat-date-range-input [rangePicker]="picker">
+                            <input matStartDate placeholder="Start date" [(ngModel)]="startDate">
+                            <input matEndDate placeholder="End date" [(ngModel)]="endDate">
+                        </mat-date-range-input>
+                        <mat-hint class="text-white small">MM/DD/YYYY – MM/DD/YYYY</mat-hint>
+                        <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                        <mat-date-range-picker touchUi #picker></mat-date-range-picker>
+                    </mat-form-field>
+                </div>
+                <div class="w-75 h-300 py-2 d-flex flex-column align-items-center justify-content-center gap-2">
+                    <span class="my-2 text-white">Selecione uma Agregação</span>
+                    <div class="d-flex flex-row align-items-center justify-content-center gap-2">
+                        <button *ngIf="isFilter && !userSelectedOptions.includes('pages_process')" [ngClass]="{ 'bg-gray': aggregate === '' }"
+                            class="btn text-14 rounded rounded-lg bg-pink text-white p-2"
+                            (click)="setAggregate('')">Contar</button>
+                        <button *ngIf="isFilter && !userSelectedOptions.includes('doc_count')" [ngClass]="{ 'bg-gray': aggregate === 'sum' }"
+                            class="btn text-14 rounded rounded-lg bg-pink text-white p-2"
+                            (click)="setAggregate('sum')">Somar</button>
+                        <button *ngIf="isFilter" [ngClass]="{ 'bg-gray': aggregate === 'avg' }"
+                            class="btn text-14 rounded rounded-lg bg-pink text-white p-2"
+                            (click)="setAggregate('avg')">Média</button>
+                    </div>
+                </div>
+                <div class="w-75 h-300 py-2 d-flex flex-column align-items-center justify-content-center gap-2" 
+                *ngIf="isFilter && userSelectedOptions.includes('created_at') && (userSelectedOptions.includes('doc_count') || userSelectedOptions.includes('pages_process'))">
+                    <span class="my-2 text-white">Selecione uma opção</span>
+                    <div class="d-flex flex-row align-items-center justify-content-center gap-2">
+                        <button [ngClass]="{ 'bg-gray': timeGrouping === 'month' }"
+                            class="btn text-14 rounded rounded-lg bg-pink text-white p-2"
+                            (click)="setAggregate('')">Mês</button>
+                        <button *ngIf="isFilter" [ngClass]="{ 'bg-gray': timeGrouping === 'year' }"
+                            class="btn text-14 rounded rounded-lg bg-pink text-white p-2">
+                        </button>
+                    </div>
+                </div>
+                <div class="h-300 mx-4 py-2 d-flex align-items-center flex-column">
+                    <span class="my-2 small w-75 text-white text-center">
+                        Salve para atualizar os dados :)
+                    </span>
+                    <div class="d-flex filterButtons">
+                        <button *ngIf="isFilter" class="btn text-14 rounded rounded-lg bg-gray text-white p-2"
+                            (click)="cleanFilter()">Limpar Filtro</button>
+                        <button *ngIf="isFilter" class="btn text-14 rounded rounded-lg bg-pink text-white p-2"
+                            (click)="addFilter()">Salvar</button>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="backdrop col p-2 gap-2 d-flex align-items-end justify-content-start flex-column">
-            <button *ngIf="!isFilter" class="btn text-14 rounded rounded-lg bg-pink text-white p-2" (click)="resetData()">Limpar</button>
+            <button *ngIf="!isFilter" class="btn text-14 rounded rounded-lg bg-pink text-white p-2"
+                (click)="resetData()">Limpar</button>
             <button class="btn text-14 rounded rounded-lg bg-gray text-white p-2"
                 (click)="closeColumnOptions()">Fechar</button>
             <button *ngIf="!isFilter" class="btn text-14 rounded rounded-lg bg-pink text-white p-2"
@@ -102,22 +133,28 @@
         </div>
         <section>
             <app-pie-chart *ngIf="chartOption === 'pie'" [cardID]="cardID" [userOptions]="userOptions"
-                [chartOption]="chartOption" [userOptionsToDB]="userOptionsToDB" [filterData]="filterData">
+                [chartOption]="chartOption" [userOptionsToDB]="userOptionsToDB" [filterDate]="filterDate"
+                [filterUserOptions]="filterUserOptions">
             </app-pie-chart>
             <app-bar-chart *ngIf="chartOption === 'bar'" [cardID]="cardID" [userOptions]="userOptions"
-                [chartOption]="chartOption" [userOptionsToDB]="userOptionsToDB" [filterData]="filterData">
+                [chartOption]="chartOption" [userOptionsToDB]="userOptionsToDB" [filterDate]="filterDate"
+                [filterUserOptions]="filterUserOptions">
             </app-bar-chart>
             <app-line-chart *ngIf="chartOption === 'line'" [cardID]="cardID" [userOptions]="userOptions"
-                [chartOption]="chartOption" [userOptionsToDB]="userOptionsToDB" [filterData]="filterData">
+                [chartOption]="chartOption" [userOptionsToDB]="userOptionsToDB" [filterDate]="filterDate"
+                [filterUserOptions]="filterUserOptions">
             </app-line-chart>
             <app-area-chart *ngIf="chartOption === 'area'" [cardID]="cardID" [userOptions]="userOptions"
-                [chartOption]="chartOption" [userOptionsToDB]="userOptionsToDB" [filterData]="filterData">
+                [chartOption]="chartOption" [userOptionsToDB]="userOptionsToDB" [filterDate]="filterDate"
+                [filterUserOptions]="filterUserOptions">
             </app-area-chart>
             <app-scatter-chart *ngIf="chartOption === 'scatter'" [cardID]="cardID" [userOptions]="userOptions"
-                [chartOption]="chartOption" [userOptionsToDB]="userOptionsToDB" [filterData]="filterData">
+                [chartOption]="chartOption" [userOptionsToDB]="userOptionsToDB" [filterDate]="filterDate"
+                [filterUserOptions]="filterUserOptions">
             </app-scatter-chart>
-            <app-horizontal-bar-chart *ngIf="chartOption === 'horizontal-bar'" [cardID]="cardID" [userOptions]="userOptions"
-                [chartOption]="chartOption" [userOptionsToDB]="userOptionsToDB" [filterData]="filterData">
+            <app-horizontal-bar-chart *ngIf="chartOption === 'horizontal-bar'" [cardID]="cardID"
+                [userOptions]="userOptions" [chartOption]="chartOption" [userOptionsToDB]="userOptionsToDB"
+                [filterDate]="filterDate" [filterUserOptions]="filterUserOptions">
             </app-horizontal-bar-chart>
             <app-empty-chart *ngIf="chartOption === 'empty'"></app-empty-chart>
             <app-loading *ngIf="chartOption === 'loading'"></app-loading>
