--- a/angular_04_echarts/src/app/components/charts/charts.component.html
+++ b/angular_04_echarts/src/app/components/charts/charts.component.html
@@ -1,4 +1,8 @@
 <p *ngIf="showChartTitle != ''" class="h-55 w-100 d-flex justify-content-center align-items-center small p-2 position-absolute"><span class="w-75 text-center">{{showChartTitle}}</span></p>
-<div id={{cardID}} class="chart" *ngIf="dataColumns != [] && isData === true"></div>
+<div 
+    id={{cardID}} 
+    class="chart {{chartClass}}" 
+    *ngIf="dataColumns != [] && isData === true"
+></div>
 <app-loading *ngIf="dataColumns === []"></app-loading>
 <app-isEmpty *ngIf="isData === false" [title]="'Nenhum resultado!'" [text]="'Esta pode ser a resposta que você está procurando. Caso contrário, tente Remover ou alterar seus filtros para torná-los menos específicos.'"></app-isEmpty>
