--- a/angular_04_echarts/src/app/page/dashboard/dashboard.component.html
+++ b/angular_04_echarts/src/app/page/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
         <aside class="dashboard-sm d-flex justify-content-evenly align-items-center gap-2">
             <div
                 class="chart-xs w-100 position-relative dashboard-sm shadow rounded rounded-lg border-pink">
-                <app-select-chart [cardID]="card01" [cardClass]="'chart-xs'"></app-select-chart>
+                <app-select-chart [cardID]="card01" [cardClass]="'chart-xs'" [chartValues]="dashboard01Data"></app-select-chart>
             </div>
             <div
                 class="chart-xs w-100 position-relative dashboard-sm shadow rounded rounded-lg border-pink">
