--- a/angular_04_echarts/src/app/components/select-chart/select-chart.component.html
+++ b/angular_04_echarts/src/app/components/select-chart/select-chart.component.html
@@ -6,7 +6,7 @@
             <h1 class="block m-2 fs-6 normal px-4 pt-3 pb-2 text-white">Selecione as colunas</h1>
             <div class="w-50 max-w-200 h-300 overflow-y-auto mx-4 py-2">
                 <section class="d-flex justify-content-center align-items-start flex-column gap-2">
-                    <div *ngFor="let column of UsersColumnsOption" class="w-100">
+                    <div *ngFor="let column of usersColumnsOption" class="w-100">
                         <button (click)="setOption(column)"
                             class="w-100 btn text-12 rounded rounded-lg bg-pink text-white p-2" [ngSwitch]="column"
                             [ngClass]="{ 'bg-gray': userOptions.selectedOptions.includes(column) }">
@@ -16,7 +16,7 @@
                             <ng-container *ngSwitchDefault>{{column}}</ng-container>
                         </button>
                     </div>
-                    <div *ngFor="let column of ExtractsColumnsOption" class="w-100">
+                    <div *ngFor="let column of extractsColumnsOption" class="w-100">
                         <button (click)="setOption(column)"
                             class="w-100 btn text-12 rounded rounded-lg bg-pink text-white p-2" [ngSwitch]="column"
                             [ngClass]="{ 'bg-gray': userOptions.selectedOptions.includes(column) }">
@@ -29,17 +29,25 @@
                             <ng-container *ngSwitchDefault>{{column}}</ng-container>
                         </button>
                     </div>
+                    <div *ngFor="let column of readyQueries" class="w-100">
+                        <button (click)="setOption(column)"
+                            class="w-100 btn text-12 rounded rounded-lg bg-pink text-white p-2" [ngSwitch]="column"
+                            [ngClass]="{ 'bg-gray': userOptions.selectedOptions.includes(column) }">
+                            <ng-container *ngSwitchCase="'only_doc_count'">Quantidade Documentos Processados</ng-container>
+                            <ng-container *ngSwitchDefault>{{column}}</ng-container>
+                        </button>
+                    </div>
                 </section>
             </div>
 
             <div class="w-50 max-w-200 mx-4 d-flex align-items-start justify-content-center flex-column gap-2">
 
-                <button class="w-100 btn text-14 rounded rounded-lg bg-pink text-white p-2" *ngIf="selectedOptions >= 2"
+                <button class="w-100 btn text-14 rounded rounded-lg bg-pink text-white p-2" *ngIf="(selectedOptions >= 2 || (selectedOptions === 1 && readyQueries.includes(userOptions.selectedOptions[0])))"
                     (click)="openChart()">
                     Proximo
                 </button>
 
-                <select *ngIf="(showChartOptions) && (selectedOptions == 2)" (change)="setChart($event)" name="chart"
+                <select *ngIf="(showChartOptions) && (selectedOptions >= 2)" (change)="setChart($event)" name="chart"
                     id="chart" class="select rounded rounded-lg bg-pink text-white p-2 w-100 pointer">
                     <option value="" disabled selected>Selecione um gráfico</option>
                     <option value="pie">Pizza</option>
@@ -48,6 +56,12 @@
                     <option value="line">Linha</option>
                     <option value="area">Área</option>
                     <option value="scatter">Dispersão</option>
+                </select>
+
+                <select *ngIf="(showChartOptions) && (selectedOptions === 1) && readyQueries.includes(userOptions.selectedOptions[0])" (change)="setChart($event)" name="chart"
+                    id="chart" class="select rounded rounded-lg bg-pink text-white p-2 w-100 pointer">
+                    <option value="" disabled selected>Selecione um gráfico</option>
+                    <option value="uniqueValue">Valor Único</option>
                 </select>
             </div>
         </div>
